fix #44: adding errorMessages to errorResponse payload
